@@ -1,3 +1,9 @@
+2011-06-02  Don Porter  <dgp@users.sourceforge.net>
+
+	* generic/tclBasic.c:	Removed TclCleanupLiteralTable(), and old
+	* generic/tclInt.h:	band-aid routine put in place while a fix
+	* generic/tclLiteral.c:	for [Bug 994838] took shape.  No longer needed.
+
 2011-06-02  Donal K. Fellows  <dkf@users.sf.net>
 
 	* generic/tclInt.h (TclInvalidateNsCmdLookup): [Bug 3185407]: Extend
